--- a/_videos/2019-8-31-cs49074.md
+++ b/_videos/2019-8-31-cs49074.md
@@ -1,10 +1,9 @@
 ---
-title: 测试是否ok
+title: 1.2 Premiere 视频编辑流程预览
 aid: 23529092
 cover_id: 5994941545415149074.jpg
 date: 2019-8-31
-tags: [测试是否ok]
+tags: [pr-1.2]
 ---
-https://www.youtube.com/watch?v=FlCS8Zsn-co
-在这个强调交流、协作、人际关系的时代，加州大学-伯克利分校的计算机系学霸小哥哥Nikhil Reddy却反其道而行，认为一定要找一个能自己独处的地方，放空自己。
-不管爱情还是友情，有时候做一条“单身狗”都挺重要的。为什么他会这么想？你认同吗？一起来看看别人的思维。
+[P1Pr-CC教程 1.2 Premiere 视频编辑流程预览](https://www.bilibili.com/video/av23529092/?p=1)
+
