--- a/_videos/2019-8-31-cs49074.md
+++ b/_videos/2019-8-31-cs49074.md
@@ -1,9 +1,9 @@
 ---
-title: 1.2 Premiere 视频编辑流程预览
+title: 视频编辑流程预览
 aid: 23529092
 cover_id: 5994941545415149074.jpg
 date: 2019-8-31
-tags: [pr-1.2]
+tags: [csssss]
 ---
 [P1Pr-CC教程 1.2 Premiere 视频编辑流程预览](https://www.bilibili.com/video/av23529092/?p=1)
 
