--- a/_videos/2019-8-31-cs49074.md
+++ b/_videos/2019-8-31-cs49074.md
@@ -3,7 +3,7 @@ title: 视频编辑流程预览
 aid: 23529092
 cover_id: 5994941545415149074.jpg
 date: 2019-8-31
-tags: [csssss]
+tags: [studywithme]
 ---
 [P1Pr-CC教程 1.2 Premiere 视频编辑流程预览](https://www.bilibili.com/video/av23529092/?p=1)
 
