--- a/_videos/2019-8-31-cs49074.md
+++ b/_videos/2019-8-31-cs49074.md
@@ -5,5 +5,5 @@ cover_id: 5994941545415149074.jpg
 date: 2019-8-31
 tags: [studywithme]
 ---
-<font color="red">[如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av23529092/?p=1)</font>font>
+[如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av23529092/?p=1)
 
