--- a/_videos/2019-8-30-PR47258094.md
+++ b/_videos/2019-8-30-PR47258094.md
@@ -1,5 +1,5 @@
 ---
-title: 讲的很详细的PR教程 很适合新手学习
+title: 课时1-教程试看内容预览
 aid: 47258094
 cover_id: b66656ffe02a047f6e92f2530249851ac4ef3660.jpg
 date: 2019-8-30
