--- a/_videos/2019-8-30-PR47258094.md
+++ b/_videos/2019-8-30-PR47258094.md
@@ -6,6 +6,7 @@ date: 2019-8-30
 tags: [studywithme]
 ---
 
-[如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av47258094/?p=1)  
 特点：多特效示例教程。
+[注：如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av47258094/?p=1)  
+
 
