--- a/_videos/2019-8-31-PR23529092.md
+++ b/_videos/2019-8-31-PR23529092.md
@@ -6,5 +6,5 @@ date: 2019-8-31
 tags: [studywithme]
 ---
 《淘宝自己花钱买的PR教程。无私分享给大家》  
-[如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av23529092/?p=1)
+[注：如果想看全部课程请点此链接进入网页观看！](https://www.bilibili.com/video/av23529092/?p=1)
 
